fix: pre does not squish A max-width of 0 seems bogus, but a pre with white-space: pre and a parent of overflow: scroll will else take the element's natural width and the scroll/overflow will NOT kick in on the pre tag IFF a parent has a margin of auto. E.g. like tw-center-x

--- a/src/assets/css/prism-coy.css
+++ b/src/assets/css/prism-coy.css
@@ -17,11 +17,12 @@ pre[class*="language-"] {
 	-moz-hyphens: none;
 	-ms-hyphens: none;
 	hyphens: none;
-}
-
-pre[class*="language-"] {
-	position: relative;
-	padding: 0;
+	/** FIX 
+      * A max-width of 0 seems bogus, but a pre with white-space: pre and a parent of overflow: scroll 
+      * will else take the element's natural width and the scroll/overflow will NOT kick in on the pre 
+      tag IFF a parent has a margin of auto. E.g. like tw-center-x.
+      */
+	max-width: 0;
 }
 
 pre[class*="language-"] > code {
